# tensorflow-lib-cmake

./: CMakeLists.txt  LICENSE  README.md  build-tensorflow.sh  hello.cpp
